# django-sms-message-example

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
src/accounts/: admin.py
src/accounts/migrations/: 0001_initial.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/notifications/: urls.py  views.py
src/notifications/sms/: sms_message.py
src/notifications/sms/backends/: __init__.py  base.py  dummy.py  logfilebased.py  smsc.py
src/notifications/sms/smsc_api/: config.py  errors.py  smsc_api.py
src/templates/: example_sms.html
