[tool.poetry]
name = "django-sms-massage-example"
version = "0.1.0"
description = ""
authors = ["Sqvall <masster1987@inbox.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.2"
Django = "^4.1.2"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
